# BDSH-ds

./: .gitignore  README.md  build_windows.bat  pyproject.toml  requirements.txt  run_app.py
.github/workflows/: build-report-web-image.yml  build-windows.yml
assets/excel/: README.md
assets/icons/: README.md
data-platform-system/: README.md
data-platform-system/collector/: Dockerfile  README.md  requirements.txt
data-platform-system/collector/collector/: __init__.py  browser_runner.py  cli.py  config.py  daily_report.py  import_client.py  scheduler.py
data-platform-system/collector/config/: jobs.example.yml
data-platform-system/deploy/: .env.example  .env.synology.example  SYNOLOGY_DEPLOY.md  docker-compose.superset.yml  docker-compose.synology.yml  docker-compose.yml
data-platform-system/deploy/superset/: superset_config.py
data-platform-system/report-platform/: Dockerfile  README.md  requirements.txt
data-platform-system/report-platform/app/: __init__.py  aggregation.py  auth.py  config.py  db.py  main.py  models.py  schemas.py
packaging/windows/: MAC_TO_WINDOWS_DELIVERY.md  README.md  tg_report_tool.spec
src/tg_reporter/: app_tk.py  cli.py  config.py  excel_report.py  history.py  images.py  io.py  paths.py  processor.py
tests/: test_processor.py
tools/: create_templates.py
数据报表/: 美团数据
配置表/: 抖音输出报表模板.xlsx  报表工具配置模板.xlsx  报表工具配置模板_区域逻辑备份_20260601_152055.xlsx  报表工具配置模板_备份_20260601_150908.xlsx  报表工具配置模板_备份_20260601_综合简报前.xlsx  美团输出报表模板.xlsx  输出报表模板-bak.xlsx  输出报表模板.xlsx  输出报表模板_备份_20260601_参考填充前.xlsx
(+24 files in other folders)
